@@ -2,12 +2,14 @@ Change log for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 2, 2023
+September 4, 2023
 
+
+Added player ship to Details screen.
 
 Pause feature added (press P).
 
-Added sprite atlas for ghost enemy on Details arena.
+Added sprite atlas for ghost enemy on Details screen.
 
 Stars are occluded by terrain. (arcade mismatch) The arcade game 
 simply didn't draw stars below the max terrain elevation, 
